# paddle_api

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs
src/client/: check_auth.rs  get_product.rs  list_products.rs  mod.rs  unit_tests.rs
src/entities/: mod.rs  product.rs
src/entities/price/: create.rs  create_price.rs  get.rs  get_price.rs  list.rs  list_prices.rs  mod.rs  update.rs  update_price.rs
src/entities/product/: check_auth.rs  create.rs  create_product.rs  get.rs  get_product.rs  list.rs  list_products.rs  mod.rs  unit_tests.rs  update_product.rs
tests/: test_auth.rs  test_price.rs  test_product.rs
tests/config/: mod.rs
