[package]
name = "paddle_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
url = "2.5.4"
anyhow = "1.0.93"

[features]
debug = []
logs = []
